[package]
name = "os"
version = "0.1.0"
author = ["Zijun Peng <crimmypeng@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { path = "/home/rCore/riscv-master" , features = ["inline-asm"] }

[profile.release]
debug = true
